# hwid-scanner

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs  unix_hwid.rs  windows_hwid.rs
