[package]
name = "hwid_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# For hardware information
sysinfo = "0.29.0"
wmi = "0.11.0"  # Windows Management Instrumentation for Windows systems
uname = "0.1.1"  # For Unix-like systems

# For the UI
eframe = "0.22.0"  # egui framework
egui = "0.22.0"
sha2 = "0.10.6"  # For hashing the hardware ID
hex = "0.4.3"    # For converting hash to hex string
